--- a/templates/index.html
+++ b/templates/index.html
@@ -16,43 +16,22 @@
             <span><i class="fas fa-cog"></i></span>
         </div>
     </header>
-
     <main class="msger-chat">
         <div class="msg left-msg" style="align-items: flex-start">
             <div class="msg-img" style="background-image: url(http://localhost:8080/static/robot.jpg);"></div>
             <div class="msg-bubble">
                 <div class="msg-info">
                     <div class="msg-info-name">BOT</div>
-                    <div class="msg-info-time">12:45</div>
+                    <div class="msg-info-time"></div>
                 </div>
                 <div class="msg-text">
                     Hi, I am your AI Assistant! Go ahead and send me your questions. 😄
                 </div>
             </div>
         </div>
-        <!--
-        <div class="msg right-msg">
-            <div
-                    class="msg-img"
-                    style="background-image: url(http://localhost:8080/static/man.png)"
-            ></div>
-
-            <div class="msg-bubble">
-                <div class="msg-info">
-                    <div class="msg-info-name">Anoop</div>
-                    <div class="msg-info-time">12:46</div>
-                </div>
-
-                <div class="msg-text">
-                    You can change your name in JS section!
-                </div>
-            </div>
-        </div>
-        -->
     </main>
-
     <form class="msger-inputarea">
-        <input type="text" class="msger-input" placeholder="Enter your question here...">
+        <textarea id="txtArea" class="msger-input" rows="5" cols="100" placeholder="Enter your question here..."></textarea>
         <button type="submit" class="msger-send-btn">Send</button>
     </form>
 </section>
