--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>AI Assistant</title>
     <link rel="stylesheet" href="/static/styles.css">
     <script type="text/javascript" src="/static/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
 </head>
 <body>
 <section class="msger">
