placeholder text change

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <div class="msg-info-time"></div>
                 </div>
                 <div class="msg-text">
-                    Hi, I am your AI Assistant! Go ahead and send me your questions. 😄
+                    Hi, I am your AI coder-agent! Go ahead and send me your queries. 😄
                 </div>
             </div>
         </div>
